<resources>
    <string name="app_name">카스토리</string>
    <string name="app_name_kr">카스토리</string>
    <string name="blank_text">""</string>
    <string name="hyphen">-</string>
    <string name="sign_intro_desc">여러분들의 자동차 정보를 \n공유해주세요.</string>
    <string name="home_intro_desc">궁금한 자동차 정보에 대해\n검색해보세요.</string>
    <string name="home_register_feed_intro_desc">나의 유용한 정보를 \n공유해보세요.</string>
    <string name="home_recent_upload_desc">최근 올라온 글</string>
    <string name="home_filter_desc">내가 저장 해놓은 필터의 글을 미리 볼수 가 있습니다.</string>
    <string name="home_news_feed">뉴스피드</string>
    <string name="home_filter">내 필터</string>
    <string name="all">전체</string>
    <string name="all_remove">전체삭제</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_welcome">로그인 정보를 입력해주세요.</string>
    <string name="email_hint">이메일을 입력해주세요.</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="password_valid_hint">비밀번호를 한번 더 입력해주세요.</string>
    <string name="search_password_desc"><![CDATA[비밀번호를 잊어버리셨나요? <b>여기를 눌려주세요.</b>]]></string>
    <string name="face_book_login_desc"><![CDATA[<b>페이스북 아이디</b> 로그인]]></string>
    <string name="kakao_login_desc"><![CDATA[<b>카카오 아이디</b>로 로그인]]></string>
    <string name="google_login_desc"><![CDATA[<b>지메일 아이디</b>로 로그인]]></string>
    <string name="email_register_desc"><![CDATA[아이디가 없으신가요? <b>이메일</b>로 회원가입]]></string>
    <string name="sign_up_welcome">회원가입 정보를 입력해주세요.</string>
    <string name="sign_up_desc"><![CDATA[-회원가입아이디는 <font color=#000000><b>이메일</b></font>로 가입이 됩니다.<br />-비밀번호는 <font color=#000000><b>8자~20자 이내 영문+숫자+특수문자(~`!@#\$%^&*()-)의 조합</b></font>으로 입력해주세요.]]></string>
    <string name="login_text">로그인</string>
    <string name="sign_up_text">회원가입</string>
    <string name="user_nick_format"><![CDATA[<b>%s</b> <font color="#8f8f8f">(%s)</font>]]></string>
    <string name="user_uid_format"><![CDATA[<font color="#d7d7d7">#%s</font>]]></string>
    <string name="facebook_error">페이스북 로그인을 시도하는 중 오류가 걸렸습니다.</string>
    <string name="google_error">구글 로그인을 시도하는 중 오류가 걸렸습니다.</string>
    <string name="kakao_error">카카오 로그인을 시도하는 중 오류가 걸렸습니다.</string>
    <string name="facebook_cancel">페이스북 로그인을 취소하였습니다.</string>
    <string name="login_error">로그인을 시도하는 중 오류가 걸렸습니다.\n이메일과 패스워드를 확인해주세요.</string>
    <string name="user_error">유저 정보를 가져올 수 없습니다.\n다시 시도해주세요.</string>
    <string name="user_ban">해당 유저는 영구정지 당한 상태입니다.\n로그인 창으로 이동합니다.</string>
    <string name="sign_up_error">해당 이메일 아이디가 가입되어 있습니다.\n다시 시도해주세요.</string>
    <string name="nick_name_null_error">닉네임 정보가 없습니다. 닉네임을 설정해주세요.</string>
    <string name="nick_name">닉네임</string>
    <string name="intro_title">간단소개</string>
    <string name="profile_error">프로필을 업데이트 할 수 없습니다. 다시 시도해주세요.</string>
    <string name="exist_nick_name_message">현재 존재하는 닉네임이 있습니다.</string>
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>
    <string name="report_detail_move_text">상세페이지</string>
    <string name="report_user_move_text">유저정보</string>
    <string name="login_confirm_title">알림</string>
    <string name="login_confirm_message">로그인이 필요한 서비스 입니다.\n로그인 하시겠습니까?</string>
    <string name="menu_home">홈</string>
    <string name="menu_tag">태그</string>
    <string name="menu_notification">알림</string>
    <string name="menu_user">유저</string>
    <string name="upload">업로드</string>
    <string name="filter">필터</string>
    <string name="label_home">HomeFragment</string>
    <string name="label_upload_activity">UploadActivity</string>
    <string name="facebook_app_id">1100716567023810</string>
    <string name="fb_login_protocol_scheme">fb1100716567023810</string>
    <string name="feed_register">카테고리 선택</string>
    <string name="select_motor">자동차 모델 선택</string>
    <string name="select_motor_desc">찾으시는 모델이 없으신 경우 기타를 선택해주세요.</string>
    <string name="select_motor_empty_desc"><![CDATA[찾으시는 모델이 없습니다 <br /><font color="#000000"><b>현존하고 있는 모델이면\n문의사항에 남겨주세요.</b></font>]]></string>
    <string name="select_motor_brand"><![CDATA[* 브랜드별로 찾으시려면 <b>여기를 클릭해주세요.</b>]]></string>
    <string name="select_motor_search_box_hint">자동차 브랜드명 또는 자동차 모델 입력</string>
    <string name="brand">브랜드</string>
    <string name="model">모델</string>
    <string name="input_title_hint">제목을 입력해주세요.</string>
    <string name="input_content_hint"><![CDATA[내용을 입력해주세요.<br /><br /><font color="#000000">태그 검색 조건을 넣으시려면 <b>#</b>을 입력 후<br />태그 내용을 넣어주세요.</font>]]></string>
    <string name="todo">TODO</string>
    <string name="complete_text">완료</string>
    <string name="complete_count_text">완료( %d )</string>
    <string name="no_pick_message">선택되지 않았습니다.</string>
    <string name="not_available_mime_type">jpg, jpeg, png 파일만 등록이 가능합니다.</string>
    <string name="not_available_photo_size">파일크기 초과(파일당 최대 5MB)</string>
    <string name="select_photo">사진 선택</string>
    <string name="select_gallery_directory">사진 폴더 선택</string>
    <string name="pick_photo_limit_size">%d/%d</string>
    <string name="pick_complete">선택완료</string>
    <string name="pick_not_select">선택안함</string>
    <string name="pick_photo_limit_message">최대 5개 사진 만 등록 가능합니다.</string>
    <string name="error_not_load_image">이미지를 불러오지 못했습니다. 다시 시도해주세요.</string>
    <string name="upload_progress_img_format">이미지 업로드 중 %d/%d</string>
    <string name="upload_progress_feed_update">글을 업데이트 중 입니다.</string>
    <string name="motorType_format_text">%s | %s</string>
    <string name="motorType_brand_all_format_text">브랜드: %s</string>
    <string name="remain_count">남은 갯수 %d</string>
    <string name="nick_name_hint">닉네임을 입력해주세요.(최대 6자)</string>
    <string name="nick_valid_hint">2글자~6글자, 한글로 공백없이 입력해주세요.</string>
    <string name="intro_text_hint">최대 3줄, 웹 주소 입력 가능</string>
    <string name="intro_empty_desc">자기소개 글이 없습니다.</string>
    <string name="feed_list_photo_count_format">+%d</string>
    <string name="feed_detail_content_tools_text">미국 정부가 ‘제2의 화웨이’로 삼고 공격하고 있는 틱톡이 미국내
        사업 전체를 미국 기업에 넘기는 방안을 제시하고 나섰다.
        이는 마이크로소프트에 미국내 사업을 넘기되 일부 지분을 보유하는 협상안에 대해 미국 행정부가 거부 반응을 보인 데 따른 후속 조처다.
틱톡에 대한 미국의 공세에 대해 중국쪽에서는 중국 첨단기업에 대한 ‘의도적 탄압’이라는 반응이 나오고 있다.
        화웨이에 대한 제재가 하드웨어 분야에 대한 탄압이라면, 틱톡 압박은 소프트웨어 분야에 대한 공격이라는 게 중국의 시각이다. 이에 따라 틱톡 문제가 미중 대결의 새로운 불씨로 급부상할 전망이다.
        통신은 1일(현지시각) 틱톡의 모기업인 중국 바이트댄스가 미국 사업을 완전히 매각할 움직임을 보이고 있다며
        이에 대한 트럼프 대통령의 반응은 그의 틱톡 공격이 국가안보 때문인지, 단순 협상 전략인지 가늠하게 해줄 것이라고 보도했다. 바이트댄스는 틱톡의 미국내 사업을 완전히 넘기는 안을 내놓은 뒤 마이크로소프트 외 다른 기업과의 협상 여지도 열어놨다고 통신은 전했다. 또 바이트댄스가 틱톡의 미국 사업을 매각하더라도 미국인 투자자들은 지분을 계속 유지할 수 있을 것이라고 는 전했다. 틱톡의 외부 투자자 중 약 70%가 미국인이다.
    </string>
    <string name="denied_permission_storage">접근을 거부하여 사진을 추가할 수 없습니다. 허용을 원하시면 설정>타소에서 \'저장공간\'을 켜주세요</string>
    <string name="denied_permission_camera">접근을 거부하여 사진을 추가할 수 없습니다. 허용을 원하시면 설정>타소에서 \'저장공간\'과 \'카메라\'를 켜주세요</string>
    <string name="re_comment_text">답글 달기</string>
    <string name="profile_welcome_title">프로필을 작성해주세요</string>
    <string name="pick_profile_img_desc">이미지 선택</string>
    <string name="profile_desc">* 닉네임은 필수 입력입니다.\n* 닉네임은 변경 할 수 없습니다.</string>
    <string name="like_text">좋아요</string>
    <string name="like_format_text">좋아요 %d개</string>
    <string name="comment_text">댓글</string>
    <string name="like_self_message">자신의 글에 좋아요를 눌릴 수 없습니다.</string>
    <string name="comment_add_error_message">댓글을 다는데 실패 하였습니다.</string>
    <string name="comment_update_error_message">댓글을 수정하는데 실패 하였습니다.</string>
    <string name="comment_remove_error_message">댓글을 삭제하는데 실패 하였습니다.</string>
    <string name="comment_user_nick">%s님께 대댓글을 남기셨습니다.</string>
    <string name="feed_remove_error_message">글을 삭제하는데 실패 하였습니다.</string>
    <string name="category_title_1">자유</string>
    <string name="category_title_2">신차</string>
    <string name="category_title_3">시승</string>
    <string name="category_title_4">수리</string>
    <string name="category_title_5">차박</string>
    <string name="category_title_6">사고</string>
    <string name="category_title_7">용품</string>
    <string name="category_title_8">세차</string>
    <string name="category_content_1">자유로운 글을 공유하세요.</string>
    <string name="category_content_2">신차 정보를 공유하세요.</string>
    <string name="category_content_3">직접 시승 했던 경험을 공유하세요.</string>
    <string name="category_content_4">자동차 수리 정보 공유하세요.</string>
    <string name="category_content_5">차박에 대한 정보를 공유하세요.</string>
    <string name="category_content_6">사고에 대한 정보를 공유하세요.</string>
    <string name="category_content_7">자동차 용품을 공유하세요.</string>
    <string name="category_content_8">세차 정보를 공유하세요.</string>
    <string name="category_title">카테고리를 선택해주세요.</string>
    <string name="enrollment_text">등록</string>
    <string name="comment_hint">댓글을 남겨주세요.</string>
    <string name="report_text">신고하기</string>
    <string name="delete_text">삭제하기</string>
    <string name="update_text">수정하기</string>
    <string name="user_lookup_text">유저프로필</string>
    <string name="send_notification_text">알람보냄</string>
    <string name="not_found_data">데이터를 찾을 수 없습니다.</string>
    <string name="not_found_board_data">이미 삭제되거나 찾을 수 없는 게시물 입니다.</string>
    <string name="tag_hint">태그 추가</string>
    <string name="tag_text">태그</string>
    <string name="tag_edit_hint">최대 글자 8자리 입력</string>
    <string name="add_text">추가</string>
    <string name="tag_desc">태그는 최대 5개까지 등록 가능합니다.</string>
    <string name="tag_equal">같은 태그값이 있습니다.</string>
    <string name="tag_empty_desc">검색결과가 없습니다.</string>
    <string name="sharp">#</string>
    <string name="search_tag"># 태그검색 (최대 8글자)</string>
    <string name="filter_complete">검색하기</string>
    <string name="camera_text">카메라</string>
    <string name="gallery_text">앨범</string>
    <string name="basic_photo_text">기본이미지</string>
    <string name="photo_menu_show">크게보기</string>
    <string name="photo_menu_delete">삭제하기</string>
    <string name="update_photo_desc">글을 수정 할 때는 이미지를 수정 할 수 없습니다.\n해당 이미지를 선택하면 크게 볼 수 있습니다.</string>
    <string name="not_update_photo_desc">해당 이미지를 선택하면 삭제 또는 크게 볼 수 있습니다.</string>
    <string name="filter_category_type">카테고리: %s</string>
    <string name="filter_motor_brand">종류: %s</string>
    <string name="filter_motor_brand_model">종류 : %s | %s</string>
    <string name="category_filter_type_default">카테고리 :전체</string>
    <string name="category_filter_motor_default">차량종류 :전체</string>
    <string name="filter_category_type_desc"><![CDATA[<font color="#8f8f8f">카테리를 선택해주세요.</font><br /><br />%s]]></string>
    <string name="filter_motor_type_desc"><![CDATA[<font color="#8f8f8f">자동차 종류를 선택해주세요.</font><br /><br />%s]]></string>
    <string name="not_select">선택없음</string>
    <string name="board_filter_title">필터 설정</string>
    <string name="setting_complete">적용하기</string>
    <string name="home_search_tag_hint">#태그로 검색이 가능합니다</string>
    <string name="search_filter_complete">조건 검색 완료</string>
    <string name="filter_not_message">카테고리와 차량을 통하여\n정보를 얻어보세요</string>
    <string name="notice_upload_title">공지사항 업로드</string>
    <string name="notice_upload_title_hint">제목을 입력해주세요.</string>
    <string name="notice_upload_message_hint">알림 메세지를 입력해주세요</string>
    <string name="notice_upload_md_file_hint">md 파일명을 입력해주세요.</string>
    <string name="permission_title">접근 권한 안내</string>
    <string name="permission_sub_title">카스토리 이용을 위해 다음 권한을 사용합니다.</string>
    <string name="permission_selective_access">선택 접근 권한</string>
    <string name="permission_notification_title">- 알림</string>
    <string name="permission_notification_sub_title">공지사항 및 댓글,대댓글 알림</string>
    <string name="permission_camera_title">- 저장공간 및 카메라</string>
    <string name="permission_camera_sub_title">프로필 사진 및 게시판 사진 등록</string>
    <string name="permission_tip_1">※ 접근 권한은 휴대폰 설정 > 애플리케이션 관리에서 변경 가능합니다.</string>
    <string name="permission_tip_2">선택 접근 권한은 해당 기능 이용시 허용이 필요하며, 비허용시에도 해당 기능 외 서비스는 이용 가능합니다.</string>
    <string name="do_next">다음에하기</string>
    <string name="do_app_update">앱 업데이트 하기</string>
    <string name="app_update_desc">카스토리 새로운 버전이 출시 되었습니다.\n새로워진 기능들을 만나기 위해서 업데이트를 해주세요!</string>
</resources>