<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.activity.UploadActivity"
    android:background="@color/white_100">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feed_register"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <Button
        android:id="@+id/tvSelectMotor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_motor"
        android:gravity="start|center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/large_text_size"
        android:drawableEnd="@drawable/ic_circle_down_arrow"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:background="?attr/selectableItemBackground"/>
    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMotor"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_x_margin"
        android:background="@drawable/edit_text_background"
        android:hint="@string/input_title_hint"
        android:theme="@style/PrimaryEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:hint="제목을 입력해주세요." />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>