<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_solid_white_100_conner_16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/activity_vertical_x_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="@dimen/dialog_message_line_spacing_extra"
            android:text="@string/app_update_desc"
            android:textColor="@color/grey_3"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintLeft_toLeftOf="@id/glLeft"
            app:layout_constraintRight_toRightOf="@id/glRight"
            app:layout_constraintTop_toTopOf="@+id/glTop"
            app:layout_goneMarginTop="0dp" />


        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_x_margin"
            android:background="@drawable/rect_stroke_black_conner_4dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:stateListAnimator="@null"
            android:text="@string/do_app_update"
            android:textColor="@color/grey_1"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/glLeft"
            app:layout_constraintRight_toRightOf="@id/glRight"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:stateListAnimator="@null"
            android:text="@string/do_next"
            android:textColor="@color/grey_4"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/glBottom"
            app:layout_constraintLeft_toLeftOf="@id/glLeft"
            app:layout_constraintRight_toRightOf="@id/glRight"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>